# assetc

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.claude/: settings.json
cmake/: cli11.cmake  fmt.cmake  glfw.cmake  imgui.cmake  ktx.cmake  meshoptimizer.cmake  slang.cmake  yaml.cmake
docs/: hanim.md  hfont.md  hman.md  hmat.md  hmesh.md  hpack.md  plan-presets-rules.md
src/: main.cpp
src/assetc/: cache.cpp  cache.hpp  check.cpp  check.hpp  config.cpp  config.hpp  encode_font.cpp  encode_font.hpp  encode_lut.cpp  encode_lut.hpp  encode_material.cpp  encode_material.hpp  encode_mesh.cpp  encode_mesh.hpp  inspect.cpp  inspect.hpp  pack.cpp  pack.hpp  runtime_anim.cpp  runtime_font.cpp  runtime_manifest.cpp  runtime_manifest.hpp  runtime_material.cpp  runtime_mesh.cpp  runtime_mesh.hpp  shader.cpp  shader.hpp
src/sdk/: CMakeLists.txt  README.md
src/sdk/include/assetc/: hash.hpp  pack.hpp  runtime_anim.hpp  runtime_font.hpp  runtime_manifest.hpp  runtime_material.hpp  runtime_mesh.hpp  sdk.hpp
src/sdk/src/: diag.cpp  diag.hpp  hash.cpp  pack.cpp  runtime_anim.cpp  runtime_font.cpp  runtime_manifest.cpp  runtime_material.cpp  runtime_mesh.cpp
src/viewer/: gpu.cpp  gpu.hpp  mesh_view.cpp  mesh_view.hpp  viewer.cpp  viewer.hpp
tests/: CMakeLists.txt  check.hpp  test_anim.cpp  test_cache.cpp  test_check.cpp  test_config.cpp  test_font.cpp  test_hash.cpp  test_ktx_raw.cpp  test_manifest.cpp  test_mesh.cpp  test_pack.cpp
